packages/isar_generator/test/errors/id/missing.dart
// no id property defined

import 'package:isar/isar.dart';

@Collection()
class Test {
  late int id;

  late String name;
}
